--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,14 @@
   list-style: none;
 }
 
+.PlayMenuLabel {
+  display: block;
+}
+
+.BetMenuLabel {
+  display: block;
+}
+
 .PolicyGraph {
   border: 1px solid grey;
   max-height: calc(0.8 * var(--minor-axis));
